# my_strstr

./: .appveyor.yml  .gitignore  .travis.yml  CMakeLists.txt  README.md  appveyor.yml
CMakeModules/: CodeCoverage.cmake  GTest.cmake
my_strstr/: Source.cpp  main.cpp  my_strstr.sln  my_strstr.vcxproj
my_strstr/Debug/: my_strstr.ilk  vc140.idb
my_strstr/Debug/my_strstr.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  my_strstr.lastbuildstate
src/: Painter.cpp  Painter.h  Turtle.cpp  Turtle.h  my_strstr.cpp  my_strstr.h
test/: CMakeLists.txt  MockPainter.hpp  test_my_strstr.cpp  test_turtle.cpp
